--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -10,6 +10,7 @@
       "@components/*": ["components/*"],
       "@assets/*": ["assets/*"],
       "@config/*": ["config/*"],
-    }
+    },
+    "types": ["node", "vite/client"]
   }
 }
