--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,12 +14,18 @@
     "@tanstack/react-query": "^5.62.7",
     "animate.css": "^4.1.1",
     "axios": "^1.8.4",
+    "i18next": "^25.0.1",
+    "i18next-browser-languagedetector": "^8.0.5",
+    "i18next-http-backend": "^3.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
+    "react-hot-toast": "^2.5.2",
+    "react-i18next": "^15.5.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
     "react-toastify": "^10.0.6",
+    "socket.io-client": "^4.8.1",
     "universal-cookie": "^7.2.2"
   },
   "devDependencies": {
