--- a/api/package.json
+++ b/api/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "src/server.js",
   "scripts": {
+    "build": "babel src --out-dir dist --copy-files",
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
     "lint": "npx eslint --fix ."
@@ -19,6 +20,9 @@
     "sharp": "^0.34.1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.27.0",
+    "@babel/core": "^7.26.10",
+    "@babel/preset-env": "^7.26.9",
     "@eslint/js": "^8.38.0",
     "@typescript-eslint/eslint-plugin": "^8.30.1",
     "@typescript-eslint/parser": "^8.30.1",
