--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -6,12 +6,11 @@ WORKDIR /usr/src/app
 
 # Copy package.json and package-lock.json first (for caching)
 COPY api/package*.json ./
-
-# Install dependencies
 RUN npm install
 
 # Copy the rest of the application
 COPY api/ ./
+WORKDIR /usr/src/app/api
 
 # Build ứng dụng
 RUN npm run build
