--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,22 +14,28 @@
     "@tanstack/react-query": "^5.62.7",
     "animate.css": "^4.1.1",
     "axios": "^1.8.4",
+    "chart.js": "^4.4.9",
+    "crypto-js": "^4.2.0",
     "i18next": "^25.0.1",
     "i18next-browser-languagedetector": "^8.0.5",
     "i18next-http-backend": "^3.0.2",
+    "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
+    "react-hook-form": "^7.56.1",
     "react-hot-toast": "^2.5.2",
     "react-i18next": "^15.5.1",
     "react-icons": "^5.4.0",
-    "react-router-dom": "^7.0.2",
+    "react-router-dom": "^7.5.2",
     "react-toastify": "^10.0.6",
     "socket.io-client": "^4.8.1",
     "universal-cookie": "^7.2.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@types/crypto-js": "^4.2.2",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^22.14.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
