--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,10 @@ services:
     environment:
       - NODE_ENV=production
       - MONGO_URI=mongodb://mongo:27017/fashionstock
+      - JWT_SECRET=modibanoiminhkhongbiet
+      - ENCRYPT_KEY=thachtimraduocday
+      - DOMAIN=http://localhost:5000
+      - PORT=5000
     mem_limit: 1g
     cpus: 1
     restart: always
@@ -37,6 +41,12 @@ services:
       - app-network
     depends_on:
       - mongo
+    environment:
+      - NODE_ENV=production
+      - JWT_SECRET=modibanoiminhkhongbiet
+      - VITE_ENCRYPT_KEY=thachtimraduocday
+      - VITE_API_URL=http://localhost:5000
+      - VITE_PORT=5001
     restart: always
 
 networks:
