--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 version: "3.8"
+
 services:
   mongo:
     image: mongo:latest
@@ -13,40 +14,31 @@ services:
   api:
     build:
       context: .
-      dockerfile: Dockerfile.api # Chỉ định Dockerfile cho API
+      dockerfile: Dockerfile.api
     ports:
-      - "5000:5000" # Map port 3000 của container sang port 3000 của máy host
+      - "5000:5000"
     networks:
       - app-network
     depends_on:
       - mongo
-    environment:
-      - NODE_ENV=production
-      - MONGO_URI=mongodb://mongo:27017/fashionstock
-      - JWT_SECRET=modibanoiminhkhongbiet
-      - ENCRYPT_KEY=thachtimraduocday
-      - DOMAIN=http://localhost:5000
-      - PORT=5000
     mem_limit: 1g
     cpus: 1
     restart: always
+    env_file:
+      - .env
 
   user:
     build:
       context: .
-      dockerfile: Dockerfile.user # Chỉ định Dockerfile cho User
+      dockerfile: Dockerfile.user
     ports:
-      - "5001:5001" # Map port 3001 của container sang port 3001 của máy host
+      - "5001:5001"
     networks:
       - app-network
     depends_on:
       - mongo
-    environment:
-      - NODE_ENV=production
-      - JWT_SECRET=modibanoiminhkhongbiet
-      - VITE_ENCRYPT_KEY=thachtimraduocday
-      - VITE_API_URL=http://localhost:5000
-      - VITE_PORT=5001
+    env_file:
+      - .env
     restart: always
 
 networks:
