--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,14 @@ services:
       - frontend/.env
     restart: always
 
+  nginx:
+    build: ./nginx
+    ports:
+      - "80:80"
+      - "443:443"
+    networks:
+      - app-network
+
 networks:
   app-network:
     driver: bridge
